dark mode fixes

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31886,8 +31886,12 @@ video {
   font-style: normal;
 }
 
-html {
+body.light-bg {
   background: url(/img/whitepaper-bg.png);
+}
+
+body.dark-bg {
+  background: url(/img/y-so-serious.png);
 }
 
 @media (min-width: 640px) {
